syntax = "proto3";

package users.messages.v1;

import "users/messages/v1/user.proto";

message CreateUserResponse {
  User user = 1;
}
